--- a/Informe Económico/Informe-Contexto-Económico.Rmd
+++ b/Informe Económico/Informe-Contexto-Económico.Rmd
@@ -74,7 +74,7 @@ plot1 <- ggplot(Inflacion, aes(x = Fecha)) +
         plot.subtitle = element_text(hjust = 0.5))
 plot1
 
-ggsave("plot1.svg", plot = plot1)
+ggsave("plot1.svg", plot = plot1, width = 10, height = 6, units = "in")
 ```
 
 En enero de 2022, el país experimentó una inflación interanual del 3.50%. A lo largo del año, este índice se mantuvo por encima del límite superior de la meta inflacionaria establecida por el Banco Central de Costa Rica (3%, ±1 p.p.), con la excepción del mes de enero. El valor más alto se registró en agosto, alcanzando un 12.13%, seguido de una desaceleración en los cuatro meses siguientes, donde en diciembre se registró una inflación interanual de 7.88%. La inflación importada fue la principal causa del aumento de esta variable, lo que provocó un alza en los precios de los alimentos y los derivados del petróleo. La situación geopolítica, particularmente la Guerra entre Rusia y Ucrania, contribuyó a estas presiones inflacionarias, aunque se observó un freno en ellas a partir del mes de agosto, coincidiendo con una disminución en el tipo de cambio.
@@ -124,7 +124,7 @@ En el siguiente gráfico se muestra el comportamiento de estas tasas.
   labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del BCCR."))
 
 Tasas_experimentadas_plot
-ggsave("Tasas_experimentadas_plot.svg", plot = Tasas_experimentadas_plot)
+ggsave("Tasas_experimentadas_plot.svg", plot = Tasas_experimentadas_plot, width = 10, height = 6, units = "in")
 ```
 
 La tasa de política monetaria en el 2022 presentó un comportamiento al alza, iniciando con un 1.75%  y en los últimos tres meses del año las tasas fueron constantes, especificamente de 9%. Esto se debe a las presiones inflacionarias sufridas en el 2021 ,por lo que, con el fin de contrarrestar la tendencia al crecimiento de la inflación y alcanzar la neutralidad en la política monetaria, el BCCR realizó ocho ajustes al alza de la TPM durante ese año. Esto ocasionó incrementos en la tasa básica pasiva  donde, en los primeros 4 meses del 2022 dicha tasa experimentó un leve decrecimiento pero para el resto del año tuvo una gran subida, pasando de una tasa de 2.90% en abril a una de 6.35% en diciembre.
@@ -167,7 +167,7 @@ plot3 <- ggplot(PIB, aes(x = Trimestre, y = `Producto Interno Bruto a precios de
         plot.caption = element_text(hjust = 0, color = "black", size = 8)) +
   labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del BCCR."))
 plot3
-ggsave("plot3.svg", plot = plot3)
+ggsave("plot3.svg", plot = plot3, width = 10, height = 6, units = "in")
 ```
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, echo=FALSE}
@@ -185,7 +185,7 @@ plot4 <- ggplot(PIB, aes(x = Trimestre, y = `Tasa de Variación Interanual`)) +
 
 plot4
 
-ggsave("plot4.svg", plot = plot4)
+ggsave("plot4.svg", plot = plot4, width = 10, height = 6, units = "in")
 ```
 
 Tras la pandemia del COVID-19, en el 2022 la economía del mundo se comenzó a recuperar debido a las campañas de vacunación contra el virus y en consecuencia la eliminación de muchas de las restricciones sanitarias que impedían el desenvolvimiento económico. Esto se puede observar por medio del gráfico que muestra la evolución del PIB en donde para cada uno de los trimestres del año 2022 existe un crecimiento. 
@@ -239,7 +239,7 @@ plot5 <- ggplot(variaciones_largas, aes(x = Fecha, y = Variación, fill = Tipo))
 
 plot5
 
-ggsave("plot5.svg", plot = plot5)
+ggsave("plot5.svg", plot = plot5, width = 10, height = 6, units = "in")
 ```
 
 Según el informe de la Organzación Mundial del Trabajo (OIT), entre enero y octubre del 2022 el salario mínimo real de Costa Rica en promedio se desvalorizó en un 4.7% ya que, como se puede observar en el gráfico anterior en donde se refleja que si bien las variaciones nominales muestran una estabilidad positiva y un aumento en julio del 2022, las variaciones reales son todo lo contrario pues, cada mes se da un aumento de manera negativa hasta en agosto de ese año donde empiezan a disminuir. 
@@ -356,7 +356,7 @@ plot5 <- Balance_Fiscal_L %>%
   )
 
 plot5
-ggsave("plot5.svg", plot = plot5)
+ggsave("plot5.svg", plot = plot5, width = 10, height = 6, units = "in")
 ```
 
 
@@ -397,7 +397,7 @@ plot6 <- ggplot(TipoCambio1, aes(x = Fecha)) +
         plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5))
 plot6
-ggsave("plot6.svg", plot = plot6)
+ggsave("plot6.svg", plot = plot6, width = 10, height = 6, units = "in")
 ```
 
 En diciembre de 2022, el tipo de cambio cerró con una tasa de compra de $₡594/US\$$ y una tasa de venta de $₡601/US\$$. Estas cifras fueron notablemente más bajas en comparación con los niveles observados a lo largo del año, el cual estuvo caracterizado por una alta volatilidad en esta variable. Durante el año, el tipo de cambio experimentó una apreciación del 7%. Inicialmente, el tipo de cambio mostró una tendencia al alza en los primeros meses, alcanzando su punto más alto a mediados del año, sin embargo, experimentó un alto en el segundo semestre tras el anuncio por parte del Banco Central de Costa Rica (BCCR) de una serie de medidas destinadas a controlar esta tendencia. Como resultado, en el segundo semestre del año, el tipo de cambio comenzó a descender. Entre las medidas adoptadas por el BCCR para contrarrestar el alza en el tipo de cambio se encuentran la emisión de instrumentos financieros en dólares, la reducción del horario de negociación del MONEX y el otorgamiento de un préstamo de $1 000 millones al Fondo Latinoamérica de Reservas (FLAR) con el fin de fortalecer las reservas del país.
