--- a/Informe Demográfico del Régimen/Informe-Contexto-Demográfico-del-Régimen.Rmd
+++ b/Informe Demográfico del Régimen/Informe-Contexto-Demográfico-del-Régimen.Rmd
@@ -162,9 +162,7 @@ Graf1 <- rbind(
     x =
       "Edad",
     y =
-      "Conteo",
-    title =
-      "Distribución de Edades"
+      "Conteo"
   ) +
   theme_cowplot()+
   coord_flip() +
@@ -207,19 +205,13 @@ Graf1 <- rbind(
       element_blank()
   ) +
   labs(
-    title =
-      "Gráfico 1: Pirámide Poblacional del Régimen",
-    subtitle =
-      "por Edad según el Género",
     y =
       "Cantidad",
     x =
-      "Edad",
-    caption =
-      expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C.")
+      "Edad"
   )
 
-ggsave("Graf1.svg", plot = Graf1, width = 10, height = 6, units = "in")
+ggsave("Graf1.pdf", plot = Graf1, width = 10, height = 6, units = "in")
 ```
 
 
@@ -286,8 +278,7 @@ piramide2 <- activos_filtrados %>%
 Graf2 <- ggplot(piramide2, aes(x = Edad_intervalo, y = ifelse(Sexo == "M", -Count, Count), fill = Sexo)) +
   geom_bar(stat = "identity") +
   scale_y_continuous(labels = abs) +
-  labs(title = "Gráfico 2: Pirámide Poblacional \n de Activos",
-       subtitle = "2023",
+  labs(
        x = "Edad",
        y = "Activos",
        fill = "Sexo") +
@@ -299,10 +290,9 @@ Graf2 <- ggplot(piramide2, aes(x = Edad_intervalo, y = ifelse(Sexo == "M", -Coun
         legend.title = element_blank()) +
   coord_flip()+
   scale_fill_manual(values = c( "cadetblue3","#2F4F4F"),
-                    labels = c( "Mujeres","Hombres"))+
-  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
+                    labels = c( "Mujeres","Hombres"))
 
-ggsave("Graf2.svg", plot = Graf2, width = 10, height = 6, units = "in")
+ggsave("Graf2.pdf", plot = Graf2, width = 10, height = 6, units = "in")
 ```
 
 Al 31 de diciembre de 2023 hay un total de 3.758 de cotizantes activos del fondo de pensiones, cuya distribución por sexo es la siguiente: 1.907 mujeres (50,75%) y 1.851 hombres (49,25%). 
@@ -345,8 +335,7 @@ datos_long <- tidyr::pivot_longer(activos_combined, cols = c(F, M), names_to = "
 # Crear el gráfico
 Graf3 <- ggplot(datos_long, aes(x = Antiguedad_Interva, y = Cantidad, fill = Sexo)) +
   geom_bar(stat = "identity", position = "dodge") +
-  labs(title = "Gráfico 3: Distribución de la \n Antigüedad de Activos",
-       subtitle = "2023",
+  labs(
        x = "Antigüedad (años)",
        y = "Cantidad",
        fill = "Género") +
@@ -356,10 +345,9 @@ Graf3 <- ggplot(datos_long, aes(x = Antiguedad_Interva, y = Cantidad, fill = Sex
         plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
-        legend.title = element_blank())+
-  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
+        legend.title = element_blank())
 
-ggsave("Graf3.svg", plot = Graf3, width = 10, height = 6, units = "in")
+ggsave("Graf3.pdf", plot = Graf3, width = 10, height = 6, units = "in")
 ```
 
 
@@ -409,8 +397,7 @@ piramide <- pensionados %>%
 Graf4 <- ggplot(piramide, aes(x = Edad_intervalo, y = ifelse(SEXO == "M", -Count, Count), fill = SEXO)) +
   geom_bar(stat = "identity") +
   scale_y_continuous(labels = abs) +
-  labs(title = "Gráfico 4: Pirámide Poblacional de Pensionados",
-       subtitle = "2023",
+  labs(
        x = "Edad",
        y = "Pensionados",
        fill = "Sexo") +
@@ -422,10 +409,9 @@ Graf4 <- ggplot(piramide, aes(x = Edad_intervalo, y = ifelse(SEXO == "M", -Count
         legend.title = element_blank()) +
   coord_flip()+
   scale_fill_manual(values = c( "cadetblue3","#2F4F4F"),
-                    labels = c( "Mujeres","Hombres"))+
-  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
+                    labels = c( "Mujeres","Hombres"))
 
-ggsave("Graf4.svg", plot = Graf4, width = 10, height = 6, units = "in")
+ggsave("Graf4.pdf", plot = Graf4, width = 10, height = 6, units = "in")
 ```
 
 \begin{wrapfigure}[9]{r}{0.5\textwidth}
@@ -449,8 +435,7 @@ datos_long2 <- tidyr::pivot_longer(pensionados_por_tipo, cols = c(F, M), names_t
 
 Graf5 <- ggplot(datos_long2, aes(x = COD_TIPO_PENSION, y = Cantidad, fill = Sexo)) +
   geom_bar(stat = "identity", position = "dodge") +
-  labs(title = "Gráfico 5: Distribución de los \n Tipos de Pensión",
-       subtitle = "2023",
+  labs(
        x = "Tipos de Pensión",
        y = "Cantidad",
        fill = "Género") +
@@ -460,10 +445,9 @@ Graf5 <- ggplot(datos_long2, aes(x = COD_TIPO_PENSION, y = Cantidad, fill = Sexo
         plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
-        legend.title = element_blank())+
-  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
+        legend.title = element_blank())
 
-ggsave("Graf5.svg", plot = Graf5, width = 10, height = 6, units = "in")
+ggsave("Graf5.pdf", plot = Graf5, width = 10, height = 6, units = "in")
 ```
 
 En cuanto al tipo de pensión, se observa que los pensionados por vejez son 236 (57.42%), seguidos por los de sucesión con 110 (26.76%) y, finalmente, los de invalidez con 65 (15.82%). Además, tanto en hombres como en mujeres, se mantiene esta distribución según lo refleja el gráfico 5. En la población masculina, destacan los pensionados por vejez, con 123 casos, lo que representa el 58.12% de los pensionados por vejez, así como los de sucesión, con 59 casos, lo que equivale al 54.64% de los pensionados por sucesión. La situación es diferente en el caso de las mujeres, donde destacan los pensionados por invalidez, con 34 casos, que constituyen el 52.30% de los pensionados por invalidez.
@@ -551,8 +535,7 @@ datos_long <- tidyr::pivot_longer(pensionados_combined, cols = c(F, M), names_to
 # Crear el gráfico
 Graf6 <- ggplot(datos_long, aes(x = Antiguedad_intervalo, y = Cantidad, fill = Sexo)) +
   geom_bar(stat = "identity", position = "dodge") +
-  labs(title = "Gráfico 6: Distribución de la \n Antigüedad de Pensionados",
-       subtitle = "2023",
+  labs(
        x = "Antigüedad (años)",
        y = "Cantidad",
        fill = "Género") +
@@ -562,10 +545,9 @@ Graf6 <- ggplot(datos_long, aes(x = Antiguedad_intervalo, y = Cantidad, fill = S
         plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
-        legend.title = element_blank())+
-  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
+        legend.title = element_blank())
 
-ggsave("Graf6.svg", plot = Graf6, width = 10, height = 6, units = "in")
+ggsave("Graf6.pdf", plot = Graf6, width = 10, height = 6, units = "in")
 ```
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE,fig.width=6, fig.height=4}
@@ -619,14 +601,13 @@ Graf7 <- ggplot(conteo_anual, aes(x = Año)) +
   geom_line(aes(y = altas, color = "altas")) +
   geom_line(aes(y = bajas, color = "bajas")) +
   scale_color_manual(values = c("altas" = "#2F4F4F", "bajas" = "cadetblue3")) +
-  labs(title = "Gráfico 7: Comportamiento de altas y bajas de los activos.", subtitle = "1994-2023", x = "Fecha", color = "Tipo", y = "Cantidad") +
+  labs(x = "Fecha", color = "Tipo", y = "Cantidad") +
   theme_cowplot() +
   theme(plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5),
-        plot.caption = element_text(hjust = 0, color = "black", size = 8)) +
-  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
+        plot.caption = element_text(hjust = 0, color = "black", size = 8)) 
 
-ggsave("Graf7.svg", plot = Graf7, width = 10, height = 6, units = "in")
+ggsave("Graf7.pdf", plot = Graf7, width = 10, height = 6, units = "in")
 ```
 
 \begin{wrapfigure}[12]{r}{0.5\textwidth}
@@ -669,8 +650,7 @@ En el gráfico 8, se muestra el comportamiento de las entradas de pensionados.
 ```{r, warning=FALSE, echo=FALSE}
 Graf8 <-  ggplot(conteo, aes(x = as.numeric(año), y = cantidad_personas, color = COD_TIPO_PENSION)) +
   geom_line() +
-  labs(title = " Gráfico 8: Entradas de pensionados por año del régimen",
-       subtitle = "2001-2023",x = " Año de inicio de pago de la pensión",
+  labs(x = " Año de inicio de pago de la pensión",
        y = "Cantidad de personas pensionadas", color = "Tipo de pensión")+
   scale_color_manual(values = c("#2F4F4F", "cadetblue3", "#BCEE68"))+
   theme_cowplot()+
@@ -678,10 +658,9 @@ Graf8 <-  ggplot(conteo, aes(x = as.numeric(año), y = cantidad_personas, color 
         plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
-        legend.title = element_blank()) +
-  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
+        legend.title = element_blank()) 
 
-ggsave("Graf8.svg", plot = Graf8, width = 10, height = 6, units = "in")
+ggsave("Graf8.pdf", plot = Graf8, width = 10, height = 6, units = "in")
 ```
 
 \begin{wrapfigure}[15]{r}{0.5\textwidth}
