--- a/Informe Económico/Informe-Contexto-Económico.Rmd
+++ b/Informe Económico/Informe-Contexto-Económico.Rmd
@@ -55,12 +55,10 @@ plot1 <- ggplot(Inflacion, aes(x = Fecha)) +
   geom_line(aes(y = `Variacion.interanual....`, color = "Variación Interanual"),size = 1) +
   geom_line(aes(y = `Variacion.acumulada.....n3`, color = "Variación Acumulada"),size = 1) +
   scale_color_manual(values = c("Variación Mensual" = "#2F4F4F", "Variación Interanual" = "#BCEE68", "Variación Acumulada" = "cadetblue3")) +
-  labs(title = "Inflación de Costa Rica",
-       subtitle = "2022-2023",
+  labs(
        x = "Fecha",
        y = "Variación",
-       color = "Tipo de Variación",
-       caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del BCCR.")) +
+       color = "Tipo de Variación") +
   theme_cowplot()+
   scale_y_continuous(labels = scales::percent_format(scale = 1), breaks = seq(-4, 13, by = 1))+
   geom_hline(yintercept = 2, linetype = "dashed", color = "black")+
@@ -74,7 +72,7 @@ plot1 <- ggplot(Inflacion, aes(x = Fecha)) +
         plot.subtitle = element_text(hjust = 0.5))
 plot1
 
-ggsave("plot1.svg", plot = plot1, width = 10, height = 6, units = "in")
+ggsave("plot1.pdf", plot = plot1, width = 10, height = 6, units = "in")
 ```
 
 En enero de 2022, el país experimentó una inflación interanual del 3.50%. A lo largo del año, este índice se mantuvo por encima del límite superior de la meta inflacionaria establecida por el Banco Central de Costa Rica (3%, ±1 p.p.), con la excepción del mes de enero. El valor más alto se registró en agosto, alcanzando un 12.13%, seguido de una desaceleración en los cuatro meses siguientes, donde en diciembre se registró una inflación interanual de 7.88%. La inflación importada fue la principal causa del aumento de esta variable, lo que provocó un alza en los precios de los alimentos y los derivados del petróleo. La situación geopolítica, particularmente la Guerra entre Rusia y Ucrania, contribuyó a estas presiones inflacionarias, aunque se observó un freno en ellas a partir del mes de agosto, coincidiendo con una disminución en el tipo de cambio.
@@ -108,8 +106,7 @@ En el siguiente gráfico se muestra el comportamiento de estas tasas.
  Tasas_experimentadas_plot <- ggplot() + 
   geom_line(aes(x = 1:24, y = TBP_experimentadas$Tasa, color = "Tasa Básica Pasiva"), lwd = 1) +      
   geom_line(aes(x = 1:24, y = TPM_experimentadas$Tasa, color = "Tasa de Política Monetaria"), lwd = 1) +
-  labs(title = "Tasa Básica Pasiva y de Política Monetaria en Costa Rica",
-       subtitle = "2022-2023",
+  labs(
        x = "Años", 
        y = "Tasa (%)",
        color = "") +
@@ -120,11 +117,11 @@ En el siguiente gráfico se muestra el comportamiento de estas tasas.
         plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
-        legend.title = element_blank()) +
-  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del BCCR."))
+        legend.title = element_blank())
+  
 
 Tasas_experimentadas_plot
-ggsave("Tasas_experimentadas_plot.svg", plot = Tasas_experimentadas_plot, width = 10, height = 6, units = "in")
+ggsave("Tasas_experimentadas_plot.pdf", plot = Tasas_experimentadas_plot, width = 10, height = 6, units = "in")
 ```
 
 La tasa de política monetaria en el 2022 presentó un comportamiento al alza, iniciando con un 1.75%  y en los últimos tres meses del año las tasas fueron constantes, especificamente de 9%. Esto se debe a las presiones inflacionarias sufridas en el 2021 ,por lo que, con el fin de contrarrestar la tendencia al crecimiento de la inflación y alcanzar la neutralidad en la política monetaria, el BCCR realizó ocho ajustes al alza de la TPM durante ese año. Esto ocasionó incrementos en la tasa básica pasiva  donde, en los primeros 4 meses del 2022 dicha tasa experimentó un leve decrecimiento pero para el resto del año tuvo una gran subida, pasando de una tasa de 2.90% en abril a una de 6.35% en diciembre.
@@ -159,15 +156,14 @@ PIB$Trimestre <- as.yearqtr(PIB$Trimestre)
 plot3 <- ggplot(PIB, aes(x = Trimestre, y = `Producto Interno Bruto a precios de mercado`)) +
   geom_line(color = "cadetblue3") +
   geom_point(color = "#2F4F4F") +
-  labs(x = "Trimestre", y = "Producto Interno Bruto", title = "Evolución del Producto Interno Bruto por trimestre en Costa Rica", subtitle = "2022-2023") +
+  labs(x = "Trimestre", y = "Producto Interno Bruto") +
   theme_cowplot() +
     theme(legend.position = "bottom",
         plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5),
-        plot.caption = element_text(hjust = 0, color = "black", size = 8)) +
-  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del BCCR."))
+        plot.caption = element_text(hjust = 0, color = "black", size = 8)) 
 plot3
-ggsave("plot3.svg", plot = plot3, width = 10, height = 6, units = "in")
+ggsave("plot3.pdf", plot = plot3, width = 10, height = 6, units = "in")
 ```
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, echo=FALSE}
@@ -175,17 +171,16 @@ plot4 <- ggplot(PIB, aes(x = Trimestre, y = `Tasa de Variación Interanual`)) +
   geom_line(color = "cadetblue3") +
   geom_point(color = "#2F4F4F") +
   geom_text(aes(label = paste(round(`Tasa de Variación Interanual`, 2), "%")), vjust = -0.05, hjust = 0.05, size = 3, nudge_y = 0.1) +
-  labs(x = "Trimestre", y = "Tasa de Variación Interanual (%)", title = "Tasa de Variación Interanual del Producto Interno Bruto por trimestre en \n Costa Rica", subtitle = "2022-2023") +
+  labs(x = "Trimestre", y = "Tasa de Variación Interanual (%)") +
   theme_cowplot() + 
   theme(legend.position = "bottom",
         plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5),
-        plot.caption = element_text(hjust = 0, color = "black", size = 8)) +
-  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del BCCR."))
+        plot.caption = element_text(hjust = 0, color = "black", size = 8)) 
 
 plot4
 
-ggsave("plot4.svg", plot = plot4, width = 10, height = 6, units = "in")
+ggsave("plot4.pdf", plot = plot4, width = 10, height = 6, units = "in")
 ```
 
 Tras la pandemia del COVID-19, en el 2022 la economía del mundo se comenzó a recuperar debido a las campañas de vacunación contra el virus y en consecuencia la eliminación de muchas de las restricciones sanitarias que impedían el desenvolvimiento económico. Esto se puede observar por medio del gráfico que muestra la evolución del PIB en donde para cada uno de los trimestres del año 2022 existe un crecimiento. 
@@ -229,17 +224,16 @@ plot5 <- ggplot(variaciones_largas, aes(x = Fecha, y = Variación, fill = Tipo))
   scale_fill_manual(values = c(`Variación interanual (%) nominal` = "#2F4F4F", `Variación interanual (%) real` = "cadetblue3"),
                     name = "Tipo de Variación",  # Define el nombre en la leyenda
                     labels = c("Variación Nominal", "Variación Real")) +  # Define las etiquetas
-  labs(title = "Variaciones Interanuales del Índice de Salario Mínimo Nominal vs Real en \n Costa Rica",subtitle = "2022-2023", x = "Fecha", y = "Variación (%)") +
+  labs(x = "Fecha", y = "Variación (%)") +
   theme_cowplot() +
   theme(legend.position = "bottom",
         plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5),
-        plot.caption = element_text(hjust = 0, color = "black", size = 8)) +
-  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del BCCR."))
+        plot.caption = element_text(hjust = 0, color = "black", size = 8))
 
 plot5
 
-ggsave("plot5.svg", plot = plot5, width = 10, height = 6, units = "in")
+ggsave("plot7.pdf", plot = plot5, width = 10, height = 6, units = "in")
 ```
 
 Según el informe de la Organzación Mundial del Trabajo (OIT), entre enero y octubre del 2022 el salario mínimo real de Costa Rica en promedio se desvalorizó en un 4.7% ya que, como se puede observar en el gráfico anterior en donde se refleja que si bien las variaciones nominales muestran una estabilidad positiva y un aumento en julio del 2022, las variaciones reales son todo lo contrario pues, cada mes se da un aumento de manera negativa hasta en agosto de ese año donde empiezan a disminuir. 
@@ -306,11 +300,7 @@ plot5 <- Balance_Fiscal_L %>%
     x =
       "Mes",
     y = 
-      "Balance Fiscal",
-    title = 
-      "Evolución del Balance Fiscal mensual en Costa Rica en millones",
-    subtitle =
-      "2022-2023") +
+      "Balance Fiscal") +
   theme_cowplot() +
     theme(
       legend.position =
@@ -334,15 +324,7 @@ plot5 <- Balance_Fiscal_L %>%
           size =
             8
           )
-      ) +
-  labs(
-    caption =
-      expression(
-        bold(
-          "Fuente: "
-          ) * "Elaborado a partir de datos del BCCR."
-        )
-    ) + scale_color_manual(
+      ) + scale_color_manual(
     values = 
       c(
         "#2F4F4F",
@@ -356,7 +338,7 @@ plot5 <- Balance_Fiscal_L %>%
   )
 
 plot5
-ggsave("plot5.svg", plot = plot5, width = 10, height = 6, units = "in")
+ggsave("plot5.pdf", plot = plot5, width = 10, height = 6, units = "in")
 ```
 
 
@@ -382,10 +364,7 @@ plot6 <- ggplot(TipoCambio1, aes(x = Fecha)) +
   scale_color_manual(values = c("Compra" = "#2F4F4F", "Venta" = "cadetblue3")) +
   labs(x = "Fecha", 
        y = "Tipo de Cambio (colones)",
-       title = "Tipo de cambio del dólar de los Estados Unidos de América", 
-       subtitle = "Ene 2022 a Dic 2023",
-       color = "Tipo de Cambio",
-       caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del BCCR."))+
+       color = "Tipo de Cambio")+
   theme_cowplot() +
   scale_y_continuous(limits = c(500, 700),  # Establece los límites del eje y
                      breaks = seq(500, 700, by = 20))+
@@ -397,7 +376,7 @@ plot6 <- ggplot(TipoCambio1, aes(x = Fecha)) +
         plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5))
 plot6
-ggsave("plot6.svg", plot = plot6, width = 10, height = 6, units = "in")
+ggsave("plot6.pdf", plot = plot6, width = 10, height = 6, units = "in")
 ```
 
 En diciembre de 2022, el tipo de cambio cerró con una tasa de compra de $₡594/US\$$ y una tasa de venta de $₡601/US\$$. Estas cifras fueron notablemente más bajas en comparación con los niveles observados a lo largo del año, el cual estuvo caracterizado por una alta volatilidad en esta variable. Durante el año, el tipo de cambio experimentó una apreciación del 7%. Inicialmente, el tipo de cambio mostró una tendencia al alza en los primeros meses, alcanzando su punto más alto a mediados del año, sin embargo, experimentó un alto en el segundo semestre tras el anuncio por parte del Banco Central de Costa Rica (BCCR) de una serie de medidas destinadas a controlar esta tendencia. Como resultado, en el segundo semestre del año, el tipo de cambio comenzó a descender. Entre las medidas adoptadas por el BCCR para contrarrestar el alza en el tipo de cambio se encuentran la emisión de instrumentos financieros en dólares, la reducción del horario de negociación del MONEX y el otorgamiento de un préstamo de $1 000 millones al Fondo Latinoamérica de Reservas (FLAR) con el fin de fortalecer las reservas del país.
